# accelerated-linux

./: Makefile  README  README.md  Required_Packages.txt  SOURCE
config/: Kconfig  (+5 more)
lib/libopengear/: Kconfig  configure  configure.in  doxygen.conf  makefile  makefile.in
lib/libopengear/include/opengear/: common.h  dataxmlalert.h  envxmlalert.h  fset.h  ifprobe.h  libinfod.h  log.h  modem.h  network.h  og_config.h  pidfile.h  pmctl.h  pmxmlalert.h  portusers.h  process.h  pwgrp.h  roles.h  sdtxmlalert.h  serial.h  session.h  stringlib.h  threadpool.h  upsxmlalert.h  users.h  xml.h  xmlalert.h  xmldb.h  zipstream.h
lib/libopengear/lua/: libopengear_lua.i
lib/libopengear/patches/: 0001-Add-extern-C-statements-replacing-BEGIN-END_DECLS.patch  0002-Adjust-Makefile-for-DAL-also-removing-unnecessary-al.patch  0003-Fixup-SCEW-and-getgr-_r-function-usage.patch  series
lib/libopengear/src/: dataxmlalert.c  envxmlalert.c  fset.c  ifprobe.c  libinfod.c  modem.c  network.c  pidfile.c  pmctl.c  pmxmlalert.c  pmxmlalert.h  portusers.c  process.c  pwgrp.c  roles.c  sdtxmlalert.c  serial.c  session.c  stringlib.c  threadpool.c  upsxmlalert.c  users.c  xml.c  xmlalert.c  xmldb.c  zipstream.c
lib/libopengear/test/: main.cpp  serial_count_mock.c  t-pwgrp.c  t-users_blackbox.c  t-users_whitebox.c  test_zip.c  usergroup_mocks.c  usergroup_setup.c  xml_config_setup.c  xmldb_test.cpp  zipdecode.pl
user/wsc_upnp/libupnp-1.3.1/: Makefile.am  Makefile.in  Makefile.src  aclocal.m4  autoconfig.h  autoconfig.h.in  config.status  configure  configure.ac  libtool  libupnp.pc  stamp-h1
(+6048 files in other folders)
