#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_INIT(libopengear, 0.1)
AC_PREREQ(2.59)
AC_CONFIG_SRCDIR(src/pmctl.c)

# AC_CONFIG_HEADER(config.h)

# Checks for programs.
AC_PROG_CC
AC_PROG_RANLIB

# Checks for libraries.

# Checks for header files.
AC_STDC_HEADERS

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.

AC_CONFIG_FILES([makefile])
AC_OUTPUT
